--- a/Yingying/supporting files/Base.lproj/Main.storyboard
+++ b/Yingying/supporting files/Base.lproj/Main.storyboard
@@ -204,6 +204,9 @@
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="手机号码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jfv-39-wt8">
                                 <rect key="frame" x="35" y="239" width="250" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="LNm-JU-mVG"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -279,10 +282,9 @@
                             <constraint firstItem="l65-n9-5Hk" firstAttribute="leading" secondItem="jfv-39-wt8" secondAttribute="leading" id="Ahs-o0-QWu"/>
                             <constraint firstItem="Gyn-Vo-Nqb" firstAttribute="top" secondItem="Q95-fm-sOC" secondAttribute="bottom" constant="6" id="BIw-YB-BWg"/>
                             <constraint firstItem="Q95-fm-sOC" firstAttribute="trailing" secondItem="Gyn-Vo-Nqb" secondAttribute="trailing" id="BX0-1P-fSo"/>
+                            <constraint firstItem="jfv-39-wt8" firstAttribute="centerX" secondItem="wKm-pk-YT9" secondAttribute="centerX" id="G6p-Fy-oZH"/>
                             <constraint firstItem="Gp8-Re-FnQ" firstAttribute="centerY" secondItem="Q95-fm-sOC" secondAttribute="centerY" id="Hc6-DC-R0v"/>
-                            <constraint firstItem="jfv-39-wt8" firstAttribute="leading" secondItem="UMH-x9-RcU" secondAttribute="leading" constant="35" id="M6t-yW-4Db"/>
                             <constraint firstItem="l65-n9-5Hk" firstAttribute="centerX" secondItem="UMH-x9-RcU" secondAttribute="centerX" id="MPo-kM-XwG"/>
-                            <constraint firstAttribute="trailing" secondItem="jfv-39-wt8" secondAttribute="trailing" constant="35" id="NQ9-Od-lIj"/>
                             <constraint firstItem="wKm-pk-YT9" firstAttribute="top" secondItem="UMH-x9-RcU" secondAttribute="top" id="OJ2-Zk-gdh"/>
                             <constraint firstItem="Gyn-Vo-Nqb" firstAttribute="centerX" secondItem="wKm-pk-YT9" secondAttribute="centerX" id="Obm-Bw-Qh0"/>
                             <constraint firstItem="wKm-pk-YT9" firstAttribute="leading" secondItem="UMH-x9-RcU" secondAttribute="leading" id="QU0-kJ-Ulw"/>
@@ -4321,9 +4323,12 @@
                                             <color key="textColor" red="0.34901960780000002" green="0.3411764706" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dA5-DZ-1ed">
+                                        <switch opaque="NO" tag="10" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dA5-DZ-1ed">
                                             <rect key="frame" x="263" y="15" width="51" height="31"/>
                                             <color key="onTintColor" red="0.31372549020000001" green="0.75294117650000003" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <action selector="onChange:" destination="kuH-SC-PxT" eventType="valueChanged" id="TpI-td-09k"/>
+                                            </connections>
                                         </switch>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4iG-fs-8cq">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="5"/>
@@ -4368,9 +4373,12 @@
                                             <color key="textColor" red="0.34901960780000002" green="0.3411764706" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="aab-Ip-Kjr">
+                                        <switch opaque="NO" tag="20" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aab-Ip-Kjr">
                                             <rect key="frame" x="263" y="10" width="51" height="31"/>
                                             <color key="onTintColor" red="0.31372549020000001" green="0.75294117650000003" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <action selector="onChange:" destination="kuH-SC-PxT" eventType="valueChanged" id="bEF-gj-Qlb"/>
+                                            </connections>
                                         </switch>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qt0-iC-a1V" userLabel="line">
                                             <rect key="frame" x="0.0" y="49" width="320" height="1"/>
@@ -4405,9 +4413,12 @@
                                             <color key="textColor" red="0.34901960780000002" green="0.3411764706" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2If-Am-d8q">
+                                        <switch opaque="NO" tag="30" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2If-Am-d8q">
                                             <rect key="frame" x="263" y="10" width="51" height="31"/>
                                             <color key="onTintColor" red="0.31372549020000001" green="0.75294117650000003" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <action selector="onChange:" destination="kuH-SC-PxT" eventType="valueChanged" id="hH2-bX-lrU"/>
+                                            </connections>
                                         </switch>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mXq-qo-Xiw" userLabel="line">
                                             <rect key="frame" x="0.0" y="49" width="320" height="1"/>
@@ -5160,7 +5171,7 @@
                                     <segue destination="e03-hC-2t4" kind="embed" id="EHO-ax-iog"/>
                                 </connections>
                             </containerView>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="sFl-Qy-scK">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="sFl-Qy-scK">
                                 <rect key="frame" x="0.0" y="64" width="320" height="29"/>
                                 <segments>
                                     <segment title="盈计划"/>
