--- a/Yingying/supporting files/Base.lproj/Main.storyboard
+++ b/Yingying/supporting files/Base.lproj/Main.storyboard
@@ -4099,7 +4099,13 @@
                             <outlet property="delegate" destination="Obf-bM-R1n" id="Xnf-dT-uvg"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="我的" id="3v9-UT-Aip"/>
+                    <navigationItem key="navigationItem" title="我的" id="3v9-UT-Aip">
+                        <barButtonItem key="rightBarButtonItem" title="消息" id="gr6-Or-OwF">
+                            <connections>
+                                <action selector="onOpenMessage:" destination="Obf-bM-R1n" id="Tnz-x8-IIs"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <segue destination="JjL-a9-Iam" kind="push" identifier="open_my_transfer_board" id="Bj9-2d-WNR"/>
@@ -4110,6 +4116,7 @@
                         <segue destination="kuH-SC-PxT" kind="push" identifier="open_my_setting_board" id="jrE-xc-c52"/>
                         <segue destination="cih-rS-Pyv" kind="push" identifier="open_my_finance_board" id="M81-EI-8bd"/>
                         <segue destination="w1A-ce-lTv" kind="push" identifier="open_my_message_board" id="1Ym-UG-Bog"/>
+                        <segue destination="WyX-fK-fj8" kind="push" identifier="open_my_favorite_board" id="UVn-5Z-fBQ"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n6A-3a-hXM" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -4829,7 +4836,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZUJ-1j-Imu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-709" y="3562"/>
+            <point key="canvasLocation" x="-1381" y="3578"/>
         </scene>
         <!--消息-->
         <scene sceneID="AuL-tT-6rI">
@@ -4867,7 +4874,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1kQ-rM-jhb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-271" y="3538"/>
+            <point key="canvasLocation" x="-943" y="3554"/>
         </scene>
         <!--贷款-->
         <scene sceneID="xy2-83-Xnn">
@@ -4945,7 +4952,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NmK-Ke-tKi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2800" y="3546"/>
+            <point key="canvasLocation" x="2762" y="3434"/>
         </scene>
         <!--贷款申请-->
         <scene sceneID="kOh-mk-tBC">
@@ -5156,7 +5163,7 @@
         <!--我的投资-->
         <scene sceneID="Xtu-dY-x7c">
             <objects>
-                <viewController id="cih-rS-Pyv" customClass="MyInvestmentViewController" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="cih-rS-Pyv" customClass="MyInvestmentViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="NyJ-eN-hp5"/>
                         <viewControllerLayoutGuide type="bottom" id="uW2-XP-zaR"/>
@@ -5172,7 +5179,7 @@
                                 </connections>
                             </containerView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="sFl-Qy-scK">
-                                <rect key="frame" x="0.0" y="64" width="320" height="29"/>
+                                <rect key="frame" x="1" y="65" width="318" height="29"/>
                                 <segments>
                                     <segment title="盈计划"/>
                                     <segment title="盈盈贷"/>
@@ -5185,12 +5192,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Dfh-iw-G00" firstAttribute="top" secondItem="sFl-Qy-scK" secondAttribute="bottom" id="590-cf-AcR"/>
-                            <constraint firstItem="sFl-Qy-scK" firstAttribute="leading" secondItem="zId-xf-sGt" secondAttribute="leading" id="Keh-YC-9eR"/>
-                            <constraint firstAttribute="trailing" secondItem="sFl-Qy-scK" secondAttribute="trailing" id="V52-8C-mPZ"/>
+                            <constraint firstItem="sFl-Qy-scK" firstAttribute="leading" secondItem="zId-xf-sGt" secondAttribute="leading" constant="1" id="Keh-YC-9eR"/>
+                            <constraint firstAttribute="trailing" secondItem="sFl-Qy-scK" secondAttribute="trailing" constant="1" id="V52-8C-mPZ"/>
                             <constraint firstItem="Dfh-iw-G00" firstAttribute="leading" secondItem="zId-xf-sGt" secondAttribute="leading" id="f3s-43-MlE"/>
                             <constraint firstAttribute="trailing" secondItem="Dfh-iw-G00" secondAttribute="trailing" id="iM8-cb-62J"/>
                             <constraint firstItem="uW2-XP-zaR" firstAttribute="top" secondItem="Dfh-iw-G00" secondAttribute="bottom" id="iUp-bQ-r3J"/>
-                            <constraint firstItem="sFl-Qy-scK" firstAttribute="top" secondItem="NyJ-eN-hp5" secondAttribute="bottom" id="rMc-yF-Umm"/>
+                            <constraint firstItem="sFl-Qy-scK" firstAttribute="top" secondItem="NyJ-eN-hp5" secondAttribute="bottom" constant="1" id="rMc-yF-Umm"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="我的投资" id="JkC-d6-m8X"/>
@@ -5210,6 +5217,14 @@
                     <view key="view" contentMode="scaleToFill" id="LlX-s0-CkQ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="427"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="我是盈贷款" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="khd-u0-Hg8">
+                                <rect key="frame" x="37" y="196.5" width="85" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 2" id="xfw-s2-bGn"/>
@@ -5513,7 +5528,68 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zGp-87-FcL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="174" y="3530"/>
+            <point key="canvasLocation" x="-498" y="3546"/>
+        </scene>
+        <!--我的收藏-->
+        <scene sceneID="Qk8-yn-VqM">
+            <objects>
+                <tableViewController id="WyX-fK-fj8" customClass="MyFavoriteController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="108" sectionHeaderHeight="28" sectionFooterHeight="28" id="qKa-bZ-fcB">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="108" id="LPH-JL-gQV">
+                                <rect key="frame" x="0.0" y="92" width="320" height="108"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LPH-JL-gQV" id="N4e-eJ-rZk">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="107.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="finance_avatar.png" translatesAutoresizingMaskIntoConstraints="NO" id="jx2-7w-kea">
+                                            <rect key="frame" x="10" y="20" width="77.5" height="77.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="jx2-7w-kea" secondAttribute="height" multiplier="1:1" id="j74-BN-xBU"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我是周边的收藏，我是周边的收藏，我是周边的收藏，我是周边的收藏，我是周边的收藏，我是周边的收藏，我是周边的收藏，" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dDv-2d-2Wr">
+                                            <rect key="frame" x="97.5" y="30" width="212" height="47"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <color key="textColor" red="0.34901960780000002" green="0.3411764706" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6eb-uq-taF">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="10"/>
+                                            <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="10" id="61a-8e-zrp"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="6eb-uq-taF" secondAttribute="trailing" id="1cr-Ep-Q5z"/>
+                                        <constraint firstItem="6eb-uq-taF" firstAttribute="leading" secondItem="N4e-eJ-rZk" secondAttribute="leading" id="32N-ki-R16"/>
+                                        <constraint firstItem="jx2-7w-kea" firstAttribute="leading" secondItem="N4e-eJ-rZk" secondAttribute="leading" constant="10" id="AFp-aq-yEa"/>
+                                        <constraint firstItem="dDv-2d-2Wr" firstAttribute="leading" secondItem="jx2-7w-kea" secondAttribute="trailing" constant="10" id="EQr-R1-bb0"/>
+                                        <constraint firstAttribute="bottom" secondItem="jx2-7w-kea" secondAttribute="bottom" constant="10" id="P2e-7B-yV7"/>
+                                        <constraint firstAttribute="trailing" secondItem="dDv-2d-2Wr" secondAttribute="trailing" constant="10" id="UlC-Lg-ppu"/>
+                                        <constraint firstItem="jx2-7w-kea" firstAttribute="top" secondItem="N4e-eJ-rZk" secondAttribute="top" constant="20" id="gEq-xP-ehJ"/>
+                                        <constraint firstItem="dDv-2d-2Wr" firstAttribute="top" secondItem="N4e-eJ-rZk" secondAttribute="top" constant="30" id="rYz-nY-RnD"/>
+                                        <constraint firstItem="6eb-uq-taF" firstAttribute="top" secondItem="N4e-eJ-rZk" secondAttribute="top" id="tCh-Dd-TbU"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="WyX-fK-fj8" id="avl-jG-ftG"/>
+                            <outlet property="delegate" destination="WyX-fK-fj8" id="i6d-Cu-f0t"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="我的收藏" id="bnM-n0-C74"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="muz-m2-bb9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="21" y="3554"/>
         </scene>
         <!--我的-->
         <scene sceneID="zUx-RI-tXQ">
