--- a/Yingying/vc/around/map/CustomMapView.xib
+++ b/Yingying/vc/around/map/CustomMapView.xib
@@ -5,7 +5,12 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LYAnnotationView"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LYAnnotationView">
+            <connections>
+                <outlet property="avatarImageView" destination="TgT-QN-Th8" id="ZZa-iZ-L2I"/>
+                <outlet property="genderImageView" destination="bD8-8c-bwT" id="epL-ib-dYX"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="dhd-QF-gFU">
             <rect key="frame" x="0.0" y="0.0" width="40" height="80"/>
