--- a/Yingying/vc/around/map/CustomMapView.xib
+++ b/Yingying/vc/around/map/CustomMapView.xib
@@ -13,23 +13,28 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="dhd-QF-gFU">
-            <rect key="frame" x="0.0" y="0.0" width="40" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="40" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="map_avatar.png" translatesAutoresizingMaskIntoConstraints="NO" id="TgT-QN-Th8">
-                    <rect key="frame" x="0.0" y="0.0" width="40" height="50"/>
+                    <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="40" id="Qsx-on-EhQ"/>
+                        <constraint firstAttribute="height" constant="40" id="mdN-YE-bn5"/>
+                    </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="map_man_location.png" translatesAutoresizingMaskIntoConstraints="NO" id="bD8-8c-bwT">
-                    <rect key="frame" x="10" y="50" width="30" height="30"/>
+                    <rect key="frame" x="10" y="40" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="NJd-bN-vmn"/>
+                        <constraint firstAttribute="width" constant="30" id="y1B-j8-Sc1"/>
                     </constraints>
                 </imageView>
             </subviews>
             <constraints>
                 <constraint firstItem="bD8-8c-bwT" firstAttribute="leading" secondItem="dhd-QF-gFU" secondAttribute="leading" constant="10" id="09i-eZ-P10"/>
                 <constraint firstItem="TgT-QN-Th8" firstAttribute="leading" secondItem="dhd-QF-gFU" secondAttribute="leading" id="C5d-db-Koc"/>
-                <constraint firstItem="TgT-QN-Th8" firstAttribute="top" secondItem="dhd-QF-gFU" secondAttribute="top" id="Pzz-a9-T4G"/>
+                <constraint firstItem="TgT-QN-Th8" firstAttribute="top" secondItem="dhd-QF-gFU" secondAttribute="top" priority="750" id="Pzz-a9-T4G"/>
                 <constraint firstAttribute="bottom" secondItem="bD8-8c-bwT" secondAttribute="bottom" id="agL-WT-Q3g"/>
                 <constraint firstAttribute="trailing" secondItem="bD8-8c-bwT" secondAttribute="trailing" id="fBB-OB-ZRm"/>
                 <constraint firstAttribute="trailing" secondItem="TgT-QN-Th8" secondAttribute="trailing" id="juK-ds-8hk"/>
